--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,48 +1,73 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: "Poppins", sans-serif;
+}
+
+body {
+  width: 100%;
+  min-height: 100vh;
+  background: linear-gradient(150deg, #c83658 20%, #c25124 100%);
+}
+
+h2 {
+  color: #fff;
+  margin-left: 8rem;
+  padding: 4rem 0;
+  font-size: 2.2rem;
 }
 
 .container {
-  max-width: 400px;
-  margin: 0 auto;
-  padding: 20px;
+  border: 2px solid white;
+  min-width: 50rem;
+  position: absolute;
+  transform: translate(-50%, -50%);
+  top: 50%;
+  left: 50%;
+  padding: 2rem;
 }
 
-form {
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 20px;
+.container-input {
+  background-color: #fff ;
+  padding: 1.5rem;
+  border-radius: 0.5rem;
+  box-shadow: 0 15px 30px rgba(0, 0, 0, 0.3);
+  position: relative;
 }
 
-input[type="text"] {
-  padding: 10px;
-  margin-bottom: 10px;
+.container-input 
+input {
+  width: 80%;
+  height: 100%;
+  padding: 1rem;
+  font-size: 1rem;
+  border: 2px solid transparent;
+  color: black;
 }
 
+.container-input 
 button {
-  margin: 10px 0;
-  padding: 10px 20px;
-  background-color: #007bff;
+  background-color: #c83658;
+  border: 2px solid #c83658;
   color: #fff;
-  border: none;
+  margin-left: 4rem;
+  padding: 0.6rem 0.6rem 0.3rem;
+  font-size: 1.2rem;
   cursor: pointer;
+  border-radius: 100%;
 }
 
-button:hover {
-  background-color: #0056b3;
-}
-
-.resultado {
-  margin-top: 20px;
-}
-
-.resultado h3 {
-  font-size: 18px;
-}
-
-.resultado p {
-  margin: 10px 0;
+.ai-response {
+  background-color: #ffffff;
+  height: 50px;
+  padding: 5px 10px;
+  padding-top: 20px;
+  padding-bottom: 25rem;
+  margin-top: 40px;
+  border-radius: 10px;
+  border-bottom: 2px #ffff;
+  cursor: pointer;
+  overflow-y: scroll;
+  padding-left: 3rem;
 }
