--- a/src/pages/Home.module.css
+++ b/src/pages/Home.module.css
@@ -26,8 +26,8 @@
 }
 
 .containerInput button {
-  background-color: #c83658;
-  border: 2px solid #c83658;
+  background-color: #5C1104;
+  border: 2px solid #5C1104; /* c83658 */
   color: #fff;
   margin-left: 4rem;
   padding: 0.6rem 0.6rem 0.3rem;
