ALterando paar deixar mais dinâmico

--- a/src/pages/Home.module.css
+++ b/src/pages/Home.module.css
@@ -21,8 +21,9 @@
   height: 100%;
   padding: 1rem;
   font-size: 1rem;
-  border: 2px solid transparent;
+  border: 1px solidrgb(154, 147, 145)4;
   color: black;
+  margin-bottom: 10px;
 }
 
 .containerInput button {
@@ -33,7 +34,7 @@
   padding: 0.6rem 0.6rem 0.3rem;
   font-size: 1.2rem;
   cursor: pointer;
-  border-radius: 100%;
+  border-radius: 50%;
 }
 
 .aiResponse {
